<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStall">

    <ImageView
        android:id="@+id/as_image"
        android:layout_width="291dp"
        android:layout_height="186dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_image_search_24" />

    <Button
        android:id="@+id/as_btn_pick"
        android:layout_width="203dp"
        android:layout_height="37dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:text="@string/ar_btn_pick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/as_image" />

    <EditText
        android:id="@+id/as_et_nameS"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:ems="10"
        android:hint="@string/as_et_Sname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/as_btn_pick" />

    <EditText
        android:id="@+id/as_et_Sloc"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:ems="10"
        android:hint="@string/as_et_Sloc"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/as_et_nameS" />

    <EditText
        android:id="@+id/as_et_Sdesc"
        android:layout_width="330dp"
        android:layout_height="123dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:ems="10"
        android:hint="@string/as_et_Sdesc"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/as_et_Sloc" />

    <Button
        android:id="@+id/as_btn_addS"
        android:layout_width="169dp"
        android:layout_height="55dp"
        android:layout_marginStart="121dp"
        android:layout_marginLeft="121dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:layout_marginBottom="43dp"
        android:text="@string/as_btn_addS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/as_addedByS" />

    <TextView
        android:id="@+id/as_addedByS"
        android:layout_width="328dp"
        android:layout_height="34dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/as_et_Sdesc" />
</androidx.constraintlayout.widget.ConstraintLayout>